--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
-
+<h1>Example heading <span class="badge bg-secondary">New</span></h1>
+<h2>Example heading <span class="badge bg-secondary">New</span></h2>
+<h3>Example heading <span class="badge bg-secondary">New</span></h3>
+<h4>Example heading <span class="badge bg-secondary">New</span></h4>
+<h5>Example heading <span class="badge bg-secondary">New</span></h5>
+<h6>Example heading <span class="badge bg-secondary">New</span></h6>
 </body>
 </html>
