--- a/index.html
+++ b/index.html
@@ -88,5 +88,10 @@
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+@media (max-width: 767.98px) { ... }
+
+@media (max-width: 1199.98px) { ... }
+
 </body>
 </html>
